
component("Geometry") {
  sources = [
    "Affine.cpp",
    "Affine.h",
    "Angle.cpp",
    "Angle.h",
    "CubicBezier.cpp",
    "CubicBezier.h",
    "Bounds2.cpp",
    "Bounds2.h",
    "Bounds3.cpp",
    "Bounds3.h",
    "Ellipse.cpp",
    "Ellipse.h",
    "Line2.cpp",
    "Line2.h",
    "Plane.cpp",
    "Plane.h",
    "Quad2.cpp",
    "Quad2.h",
    "Quaternion.cpp",
    "Quaternion.h",
    "Ray3.cpp",
    "Ray3.h",
    "Rect.cpp",
    "Rect.h",
    "Size2.cpp",
    "Size2.h",
    "Triangle2.cpp",
    "Triangle2.h",
    "Triangle3.cpp",
    "Triangle3.h",
    "Vector2.cpp",
    "Vector2.h",
    "Vector3.cpp",
    "Vector3.h",
    "Xform2.cpp",
    "Xform2.h",
    "Xform3.cpp",
    "Xform3.h",
  ]
}

test("GeometryUnitTests") {
  sources = [
    "AffineTest.cpp",
    "CubicBezierTest.cpp",
    "Line2Test.cpp",
    "PlaneTest.cpp",
    "Quad2Test.cpp",
    "QuaternionTest.cpp",
    "RectTest.cpp",
    "Size2Test.cpp",
    "Vector2Test.cpp",
    "Vector3Test.cpp",
    "Xform3Test.cpp",
  ]
  
  deps = [
    ":Geometry",
  ]
}
